larger slideshow images added and z-index fixes for tdk

--- a/less/theme.less
+++ b/less/theme.less
@@ -44,7 +44,7 @@
 .template-header {
     position: fixed;
     width: 100%;
-    z-index: 99999;
+    z-index: 9999;
 }
 
 .fixed-header {
@@ -57,7 +57,7 @@
     transition: min-height 0.6s;
     text-align: center;
     padding-top: 40px;
-    z-index: 9999;
+    z-index: 9998;
     min-height: 28%;
 }
 
@@ -65,7 +65,7 @@
         min-height: 14%;
         border-bottom: 1px solid darken(@color-swatch1,10%);
         position: fixed;
-        z-index: 9999;
+        z-index: 9998;
         top: 0;
         left: 0;
     .container {
