--- a/less/widgets.less
+++ b/less/widgets.less
@@ -599,6 +599,10 @@
     padding-bottom: 40%;
 }
 
+.responsiveslideshow .contain .figure {
+    background-size: cover;
+}
+
 // Hide Img Element
 .responsiveslideshow__image {
     display: none;
